[tool.poetry]
name = "energy-test"
version = "0.1.0"
description = ""
authors = ["ZzKaiJun <riderheg6411@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
